# demochatbot

./: Dockerfile  README.md  pyproject.toml
bot/: bot.ipynb  bot.py
